--- a/templates/info_card.html
+++ b/templates/info_card.html
@@ -1,7 +1,9 @@
 <div class="w3-container w3-quarter w3-{{ color }}" style="min-width: 200px;">
-    <div class="w3-card-4">
-    <div style="height: 200px; overflow-y: scroll;">
-    <header class="w3-center w3-container">
+    <div class="w3-card-4 w3-green">
+        <div style="height: 200px; overflow-y: scroll;">
+
+    <header class="w3-white w3-container w3-display-container">
+        <small class="w3-display-topright"><button class="w3-button" onclick="Deletetdl({{ id }})">x</button></small>    <div class=></div>
         <h1 class="w3-center">
             {{ title }}
         </h1>
@@ -12,7 +14,6 @@
     </div>
 
     </div>
-    <small><small><button class="w3-button w3-red" onclick="Deletetdl({{ id }})">Delete</button></small></small>    <div class=></div>
     </div>
 </div>
 
